Refresh token implementation

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ JWT_SECRET=YOUR_SECRET_KEY_HERE
 JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
 JWT_ACCESS_TOKEN_TTL=3600
+# Specify the life time/time to live for our refresh tokens
+# 86400 represents 24 hours in milliseconds.
+JWT_REFRESH_TOKEN_TTL= 86400
